BUG：Zeze.Collections.Queue setCount 位置不对。